--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-/custom/real_graphs/*
 /datasets/*
+/custom/real_graphs/*
 /custom/data_splits/test/*
 /custom/data_splits/train/*
 /custom/data_splits_scalability_test/*
 /custom/graphs/*
 /custom/graphs_scalability_test/*
+/custom/models/*
+/custom/plots/*
+/custom/real_graphs/*
+/custom/__pycache__/
