--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
+__pycache__
 /datasets/*
-/custom/real_graphs/*
+/custom/*.pickle
+/custom/old_outputs/*.pickle
+/custom/__pycache__/
+/custom/data_splits/*
 /custom/data_splits/test/*
 /custom/data_splits/train/*
-/custom/data_splits_scalability_test/*
+/custom/graphs/*
+/custom/models/*
+/custom/models_old/*
+/custom/models/1000/*
 /custom/graphs/*
 /custom/graphs_scalability_test/*
-/custom/models/*
 /custom/plots/*
 /custom/real_graphs/*
-/custom/__pycache__/
+/custom/real_graphs/bet_real_graphs/*
+/custom/delivery/*.pickle
+/custom/delivery/data_splits/test/*
+/custom/delivery/data_splits/train/*
+/custom/delivery/data_splits_scalability_test/*
+/custom/delivery/graphs/*
+/custom/delivery/graphs_scalability_test/*
+/custom/delivery/real_graphs/bet_real_graphs/*
