--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,17 @@
 __pycache__
-/datasets/*
-/custom/*.pickle
-/custom/old_outputs/*.pickle
-/custom/__pycache__/
+/delivery/data_splits/*
+/delivery/graphs/*
+/delivery/models/*
+/delivery/real_graphs/*
+
 /custom/data_splits/*
-/custom/data_splits/test/*
-/custom/data_splits/train/*
-/custom/graphs/*
-/custom/models/*
-/custom/models_old/*
-/custom/models/1000/*
+/custom/data_splits_scalability_test/*
 /custom/graphs/*
 /custom/graphs_scalability_test/*
+/custom/models/*
+/custom/models_old/*
+/custom/old_outputs/*
+
 /custom/plots/*
 /custom/real_graphs/*
-/custom/real_graphs/bet_real_graphs/*
-/custom/delivery/*.pickle
-/custom/delivery/data_splits/test/*
-/custom/delivery/data_splits/train/*
-/custom/delivery/data_splits_scalability_test/*
-/custom/delivery/graphs/*
-/custom/delivery/graphs_scalability_test/*
-/custom/delivery/real_graphs/bet_real_graphs/*
-/delivery/real_graphs/bet_real_graphs/*
-/delivery/real_graphs/original/*
+/custom/*.pickle
